Reduce H1 title font size to address of large scores causing display wrap issues

--- a/style/main.css
+++ b/style/main.css
@@ -23,7 +23,7 @@ html, body {
   clear: both; }
 
 h1.title {
-  font-size: 64px;
+  font-size: 56px;
   font-weight: bold;
   color: #2774AE;
   margin: 0;
@@ -515,7 +515,7 @@ hr {
     padding: 0 20px; }
 
   h1.title {
-    font-size: 36px;
+    font-size: 32px;
     margin-top: 5px; }
 
   .container {
